force-app/main/default/objects/Book__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Computer Science</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Mechanical Engineering</fullName>
            </value>
            <value>
                <fullName>Civil Engineering</fullName>
            </value>
            <value>
                <fullName>Electrical and Electronics Engineering</fullName>
            </value>
            <value>
                <fullName>Electronics and Communication Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>