force-app/main/default/objects/Book__c/fields/Self_No__c.field-meta.xml
<CustomField>
    <fullName>Self_No__c</fullName>
    <label>Self No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>