force-app/main/default/objects/Book__c/fields/Total_Copies__c.field-meta.xml
<CustomField>
    <fullName>Total_Copies__c</fullName>
    <label>Total Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>