force-app/main/default/objects/Book__c/validationRules/Available_Copies_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Available_Copies_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Available_Copies__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Available_Copies__c</errorDisplayField>
    <errorMessage>Available Copies cannot be negative.</errorMessage>
</ValidationRule>