force-app/main/default/objects/Book__c/validationRules/Available_Copies_cannot_exceed_TotalCopy.validationRule-meta.xml
<ValidationRule>
    <fullName>Available_Copies_cannot_exceed_TotalCopy</fullName>
    <active>true</active>
    <errorConditionFormula>Available_Copies__c  &gt; Total_Copies__c</errorConditionFormula>
    <errorDisplayField>Available_Copies__c</errorDisplayField>
    <errorMessage>Available Copies cannot exceed Total Copies.</errorMessage>
</ValidationRule>