force-app/main/default/objects/Book__c/validationRules/Total_Copies_cannot_be_less_than_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Copies_cannot_be_less_than_1</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Copies__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Total_Copies__c</errorDisplayField>
    <errorMessage>Total Copies must be at least 1.</errorMessage>
</ValidationRule>